notifications updated + some more stuff

--- a/src/languages/de.json
+++ b/src/languages/de.json
@@ -95,6 +95,9 @@
     "submit": "Senden",
     "currentLocation": "Aktueller Standort",
     "no": "Nein",
-    "yes": "Ja"
+    "yes": "Ja",
+    "notifications": "Benachrichtigungen",
+    "noNotifications": "Keine Benachrichtigungen",
+    "coolPlacesNear": "Kühle Orte in Ihrer Nähe"
   }
 }
